[gd_scene load_steps=22 format=2]

[ext_resource path="res://art/whitedragon-sheet.png" type="Texture" id=1]
[ext_resource path="res://enemies/dragon.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.99798
height = 132.515

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damage/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("damage/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shootsense/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1.5, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("sense/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Area2D/CollisionShape2D8:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Area2D/CollisionShape2D7:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "chill"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sense/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D8:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/CollisionShape2D7:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D9:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shootsense/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("damage/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("damage/CollisionShape2D3:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("sense/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Area2D/CollisionShape2D8:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Area2D/CollisionShape2D7:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionShape2D9:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damage/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("damage/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("damage/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shootsense/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("sense/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Area2D/CollisionShape2D7:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Area2D/CollisionShape2D8:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "slash"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D7:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D8:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D9:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 15.6836

[sub_resource type="CircleShape2D" id=8]
radius = 6.79496

[sub_resource type="CircleShape2D" id=9]
radius = 21.9134

[sub_resource type="CircleShape2D" id=10]
radius = 22.8065

[sub_resource type="CircleShape2D" id=11]
radius = 743.284

[sub_resource type="CircleShape2D" id=12]
radius = 362.993

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 4.48765, 9.33334 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 1.96663, 26.3896 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 4.69877, 61.2558 )

[sub_resource type="CapsuleShape2D" id=16]
radius = 12.0581
height = 43.2468

[sub_resource type="CircleShape2D" id=17]
radius = 61.4811

[sub_resource type="CapsuleShape2D" id=18]
height = 50.6525

[sub_resource type="CircleShape2D" id=19]
radius = 70.2383

[node name="dragon" type="KinematicBody2D"]
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
z_index = 50
collision_layer = 17
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.968559, 0.301901 )
rotation = -1.5708
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.55477, 0.581135 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "chill"
anims/attack = SubResource( 2 )
anims/chill = SubResource( 3 )
anims/run = SubResource( 4 )
anims/rush = SubResource( 5 )
anims/slash = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -2.51826, 0.387424 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -23.6669, 18.9336 )
shape = SubResource( 8 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( -23.5092, -18.1447 )
shape = SubResource( 8 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( -4.89902, 47.867 )
rotation = 0.380482
shape = SubResource( 9 )
one_way_collision_margin = 0.0

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( -4.7501, -47.3319 )
rotation = -0.380482
shape = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]

[node name="sense" type="Area2D" parent="."]
visible = false
light_mask = 8
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="sense"]
light_mask = 8
shape = SubResource( 11 )

[node name="shootsense" type="Area2D" parent="."]
visible = false
light_mask = 8
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootsense"]
position = Vector2( -0.0637495, -0.076324 )
shape = SubResource( 12 )
disabled = true

[node name="damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
position = Vector2( 74.916, 0.339874 )
shape = SubResource( 13 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="damage"]
position = Vector2( 20.0409, -44.4385 )
rotation = 0.383972
shape = SubResource( 14 )
disabled = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="damage"]
position = Vector2( 19.867, 45.7651 )
rotation = -0.383972
shape = SubResource( 14 )
disabled = true

[node name="timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="mouth" type="Position2D" parent="."]
position = Vector2( 86.772, 0.134491 )

[node name="shoottimer" type="Timer" parent="."]
wait_time = 0.2

[node name="bullet" type="Node" parent="."]

[node name="slashtimer" type="Timer" parent="."]
wait_time = 1.5

[node name="slashzone" type="Area2D" parent="."]
light_mask = 8
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="slashzone"]
light_mask = 8
position = Vector2( 26.7411, 0.837376 )
shape = SubResource( 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="slashzone"]
position = Vector2( 52.1095, 1.39266 )
shape = SubResource( 16 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.227477, 0.235039 )
shape = SubResource( 17 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Area2D"]
light_mask = 8
position = Vector2( -62.5015, -4.24728 )
rotation = -1.5708
shape = SubResource( 18 )
disabled = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0.22748, 0.078967 )
shape = SubResource( 19 )
disabled = true

[node name="charget" type="Timer" parent="."]

[node name="Bar" type="ColorRect" parent="."]
margin_left = -41.0959
margin_top = -0.816902
margin_right = 22.9041
margin_bottom = 1.18309
color = Color( 0.952941, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="sense" to="." method="_on_sense_body_exited"]
[connection signal="body_entered" from="shootsense" to="." method="_on_shootsense_body_entered"]
[connection signal="body_exited" from="shootsense" to="." method="_on_shootsense_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
[connection signal="timeout" from="slashtimer" to="." method="_on_slashtimer_timeout"]
[connection signal="body_entered" from="slashzone" to="." method="_on_slashzone_body_entered"]
[connection signal="body_exited" from="slashzone" to="." method="_on_slashzone_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="charget" to="." method="_on_charget_timeout"]
